infrastructure/istio-prod/istio-base-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: base-gateway-public
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.build.resf.org"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.build.resf.org"
      tls:
        mode: SIMPLE
        credentialName: default-cert
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: base-gateway-confidential
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway-internal # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.corp.build.resf.org"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.corp.build.resf.org"
      tls:
        mode: SIMPLE
        credentialName: default-cert
